--- a/portfolio/css/index.css
+++ b/portfolio/css/index.css
@@ -41,7 +41,7 @@ header li:nth-child(1) {
   padding-left: 0;
   padding-right: 0px;
 }
-header li a { color: #fff; line-height: 40px; cursor: poiner}
+header li a { color: #fff; line-height: 40px; cursor: pointer;}
 header li:hover {
 
 }
@@ -120,7 +120,7 @@ header li:nth-child(1) ~*:hover a {
 
 
 
-.portfolio { padding-bottom: 20px; }
+.portfolio { padding-bottom: 40px; }
 .portfolio > div { overflow: hidden; }
 .portfolio > div:nth-child(1) { padding-top: 40px; }
 .portfolio > div:nth-child(2) { max-width: 1180px; }
@@ -134,17 +134,19 @@ header li:nth-child(1) ~*:hover a {
 .title-wrapper ul li:nth-child(1) a { border-bottom: 1px solid rgba(187,145,120,0.9); }
 .title-wrapper p { margin-top: 10px; }
 
-.portfolio-pic ul li { position: relative; top: 150px; padding: 20px; box-sizing: border-box; opacity:0; transition: 0.6s ease; }
+
+.portfolio-pic ul { overflow: hidden; }
+.portfolio-pic ul li { position: relative; top: 150px; padding: 20px; box-sizing: border-box; opacity:0; transition: 0.6s ease; display: none;}
 .portfolio-pic ul li.scroll { top:0; opacity: 1; }
 .portfolio-pic ul li > div { position: absolute; width: 80%; height: 70%;  left:50%; margin-left: -157px; top: 50%; margin-top: -94px; z-index:5; transition: 0.3s ease; cursor: pointer;}
 .portfolio-pic ul li > div:hover { background: rgba(187,145,120,0.8); }
 .portfolio-pic ul li > div > h3 { color: #fff; margin-left: 40px; margin-top: 50px; opacity: 0; transition: 0.3s ease; }
 .portfolio-pic ul li > div > p { margin-left: 40px; color: #fff; margin-top: 5px; opacity: 0; transition: 0.3s ease; }
 .portfolio-pic ul li > div:hover > h3 { opacity: 1; }
-  .portfolio-pic ul li > div:hover > p { opacity: 1;}
-.portfolio-pic ul li a { background: #f3f1f0; }
+.portfolio-pic ul li > div:hover > p { opacity: 1;}
 .portfolio-pic ul li img  { position: relative; width: 100%; z-index:2;}
 .portfolio-pic ul li:hover > img { width: 200%; }
+.portfolio-pic button { border:0; background: #c99679; padding: 10px 20px 10px 20px; color: #fff; margin-left: 50%; transform: translateX(-50%);}
 
 .about { background: #f3f1f0; padding-bottom: 40px; padding-top: 40px; }
 .about > div {overflow: hidden;}
@@ -238,19 +240,20 @@ header li:nth-child(1) ~*:hover a {
 
 .work-process { background: #f3f1f0; padding-top: 40px; padding-bottom: 40px; overflow: hidden; }
 .work-process p { margin-top: 10px; color: #777; }
-.work-process ul {padding-top: 40px}
+.work-process ul {padding-top: 20px; overflow: hidden;}
 .work-process li { }
-.work-process > div > ul > li > img { width: 30%; margin-left: 50%; transform: translateX(-50%); margin-top: 20px; }
+.work-process > div > ul > li > img { width: 30%; margin-left: 50%; transform: translateX(-50%); margin-top: 5px; }
 .work-process > div > ul > li > p { margin-top: 20px; text-align: center; }
 
-.contact { overflow: hidden; padding-top: 40px; }
+.contact { overflow: hidden; padding-top: 10px; padding-bottom: 10px; }
 .contact > div > h2 {  }
-.contact > div > ul > li { padding: 20px; box-sizing: border-box;}
-.contact > div > ul > li > img { width: 100%; margin-top: 40px; margin-bottom: 40px; }
-.contact > div > ul > li > div { margin-top: 30px;  }
-.contact > div > ul > li > div > p { margin-top: 10px; margin-left: 30px;  }
+.contact > div > ul > li:nth-child(2) { padding: 20px; box-sizing: border-box;}
+.contact > div > ul > li:nth-child(1) { padding-top: 30px; box-sizing: border-box;}
+.contact > div > ul > li:nth-child(1)  p { margin-top: 10px; color: #898989; }
+.contact li:nth-child(1) a { display: block; margin-top: 20px; color: #c99679; }
+.contact li:nth-child(1) h3 { margin-top: 20px;  }
 
-
+.thankyou_message h2 { font-weight: bold; font-size: 18px; text-indent: 20px; margin-top: 10px; color: #c99679; }
 
 footer { background: #f3f1f0; padding-top: 40px; padding-bottom: 40px; }
-footer p { text-align: center; }
+footer p { text-align: center; font-size: 14px; }
