--- a/nikon/css/nikon.css
+++ b/nikon/css/nikon.css
@@ -1066,7 +1066,7 @@ footer {
   font-size: 16px;
   font-weight: bold;
   margin-top: 20px;
-  outline: 1px solid aaa;
+  outline: 1px solid #aaa;
   border-radius: 5px;
   border: 2px solid #ccc;
   cursor: pointer;
@@ -1181,7 +1181,7 @@ footer {
   display: inline-block;
   margin-left: 10px;
   width: 160px;
-  hegiht: 80px;
+  height: 80px;
   vertical-align: 18px;
   line-height: 20px;
 }
@@ -1443,7 +1443,7 @@ left:0; top:0; transform: none;
 .main-banner .text-box > button {
   margin-top: 10px;
   font-size: 16px;
-  font-weight: 1;
+  font-weight: normal;
   background: #fff;
 }
 .m {
@@ -1498,7 +1498,7 @@ left:0; top:0; transform: none;
   line-height: 26px;
 }
 .product-text > span {
-  font-weight: 1;
+  font-weight: normal;
   font-size: 20px;
 }
 
@@ -1526,7 +1526,7 @@ left:0; top:0; transform: none;
   width: 300px;
   margin-left: 50%;
   transform: translateX(-150px);
-  font-weight: 1;
+  font-weight: normal;
   font-size: 20px;
   text-align: center;
 }
@@ -1823,7 +1823,4 @@ hr {
 }
 .cart ul:nth-child(3) {
   margin-top: -20px;
-}
-.cart ul
-
 }
