--- a/nikon/css/nikon.css
+++ b/nikon/css/nikon.css
@@ -5,7 +5,7 @@ li {
 a { text-decoration: none; }
 body {
   background: #fff;
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: 'arial', sans-serif;
   overflow-x: hidden;
   color: #454646;
 }
