--- a/nikon1/css/nikon.css
+++ b/nikon1/css/nikon.css
@@ -95,12 +95,13 @@ header {
   background: #fff;
   z-index:100;
   box-shadow: 0px 0.2px 10px #999;
+  transition: all 0.3s ease;
 }
 header > div.wrapper {
   position: relative;
 }
 header.notrst {
-  transition: all 0.3s ease;
+
 }
 /*  header.scroll  */
 header.scroll{
@@ -377,7 +378,7 @@ section {
 .main-banner {
   width: 100%;
   height: 8000px;
-  background: #fff;
+  background: #000;
 }
 .m { display: none; }
 /*  media query  */
