--- a/nikon/css/nikon.css
+++ b/nikon/css/nikon.css
@@ -515,6 +515,7 @@ section {
   -webkit-align-items: center;
   align-items: center;
 }
+
 .product .swiper-button-prev, .product .swiper-button-next {
   position: absolute;
   width: 40px;
@@ -1122,23 +1123,25 @@ footer {
 /*  cart form  */
 .cart {
   width: 400px;
-  height: 730px;
+  height: 630px;
   outline: 1px solid #e5e5e5;
-  margin-top: 160px;
+  margin-top: 150px;
   margin-left: 50%;
   transform: translateX(-200px);
   padding-top: 20px;
   box-sizing: border-box;
   display: none;
+  overflow: hidden;
 }
 .cart-wrapper {
   width: 300px;
   margin-left: 50%;
   transform: translate(-150px);
+  overflow: hidden;
 }
 .cart-header {
   height: 57px;
-  border-bottom: 2px solid #999;
+  border-bottom: 1px solid #777;
 }
 .cart-header > img {
   width: 30px;
@@ -1147,17 +1150,27 @@ footer {
 }
 .cart-header > h3 {
   margin-left: 10px;
-  font-size: 22px;
+  font-size: 21px;
   text-align: center;
   width: 200px;
   height: 42px;
   vertical-align: 10px;
   display: inline-block;
 }
+.cart-header > input {
+  transform: translateY(-10px);
+}
 .cart-wrapper > ul{
-  margin-top: 20px;
+  margin-top: -36px;
   width: 100%;
-  height: 470px;
+  height: 450px;
+  overflow: hidden;
+}
+.cart-wrapper > ul:nth-child(2) {
+  margin-top: 10px;
+}
+.cart-wrapper > ul:nth-child(3) {
+  height: 120px;
 }
 .cart-wrapper > ul > li {
   width: 100%;
@@ -1217,11 +1230,190 @@ footer {
   font-weight: bold;
 }
 .cart-wrapper > ul:nth-child(3) > li:nth-child(2) > p {
-  margin-top: 10px;
+  margin-top: 16px;
 }
-.cart-wrapper > ul:nth-child(3) > li:nth-child(2) > p > span {
+.total-price {
   float: right;
 }
+.total-item {
+  font-weight: normal;
+  font-size: 16px;
+}
+.cart-btn {
+  width: 400px;
+  margin-top: 20px;
+  margin-left: 50%;
+  transform: translateX(-200px);
+}
+.cart-btn button {
+  height: 40px;
+  border: 0;
+  background: #ffdd00;
+  color: #000;
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+.del-btn {
+  width: 90%;
+  margin-top: 10px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+.del-btn > button{
+  width: 48%;
+  background: #e5e5e5;
+}
+.del-btn > button:nth-child(1) {
+  float: left;
+}
+.del-btn > button:nth-child(1) {
+  float: right;
+}
+.chkout-btn {
+  width: 90%;
+  margin-top: 10px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
+
+
+
+
+/*  detail popup  */
+.detail {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 100;
+  transform: translateX(-50%) translateY(-350px);
+  width: 70%;
+  height: 700px;
+  background: #f0f0f0;
+  box-shadow: 0px 0px 50px rgba(7,7,7,0.3);
+  display: none;
+}
+.detail.block {
+  display: block;
+}
+.detail.none {
+  display: none;
+}
+.detail-wrapper {
+  max-width: 1300px;
+  margin: auto;
+  overflow: hidden;
+  /* outline: 1px solid red; */
+}
+.detail-wrapper > button {
+  margin-top: 30px;
+  margin-right: 30px;
+  float: right;
+  width: 30px;
+  height: 30px;
+  border: 0px;
+  background: #f0f0f0;
+}
+.detail .img-info img {
+  margin-top: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  width: 90%;
+  margin-left: 50%;
+}
+.detail-wrapper > button > i:nth-child(1) {
+  display: inline-block;
+  float: right;
+  width: 30px;
+  height: 30px;
+  /* outline: 1px solid red; */
+  background: url('../img/icon.png');
+  background-size: 400px 160px;
+  background-position: -204px -84px;
+  cursor: pointer;
+}
+.detail .detail-info span:nth-child(2) {
+  display: block;
+  font-size: 14px;
+  color: #aaa;
+  margin-top: 30px;
+}
+.detail .detail-info h3 {
+  font-size: 34px;
+  color: #ffdd00;
+  margin-top: 10px;
+}
+.detail .detail-info p:nth-child(4) {
+  font-size: 28px;
+  margin-top: 10px;
+}
+.detail .detail-info p:nth-child(5) {
+  font-size: 16px;
+  margin-top: 10px;
+}
+.detail .detail-info p:nth-child(6) {
+  font-size: 28px;
+  font-weight: bold;
+  margin-top: 40px;
+}
+.detail .detail-info span:nth-child(7) {
+  display: block;
+  font-size: 12px;
+  color: #bbb;
+  margin-top: 10px;
+}
+.detail .detail-info div:nth-child(8){
+  margin-top: 30px;
+}
+.detail .detail-info div:nth-child(8) button{
+  width: 29.6%;
+  height: 40px;
+  background: #fff;
+  color: #777;
+  border:0;
+  border-radius: 5px;
+}
+.detail .detail-info button:nth-child(9) {
+  background: #000;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 5px;
+  border: 0;
+  width: 60%;
+  height: 40px;
+  margin-top: 20px;
+}
+.detail .detail-info button:nth-child(9):hover {
+  background: #ffdd00;
+  color: #000;
+}
+.detail .detail-info button:nth-child(10),
+.detail .detail-info button:nth-child(11) {
+  border-radius: 5px;
+  border: 1px solid #bbb;
+  font-size: 16px;
+  color: #666;
+  width: 60%;
+  height: 40px;
+  margin-top: 20px;
+  background: transparent;
+}
+.detail .detail-info button:nth-child(10):hover,
+.detail .detail-info button:nth-child(11):hover {
+  background: #ffdd00;
+  color: #000;
+  border: 0;
+}
+.detail button:hover {
+  cursor:pointer;
+}
+
+
+
+
+
 /*  media query  */
 /*
   [디바이스의 넓이]
@@ -1854,7 +2046,4 @@ hr {
 }
 .cart ul:nth-child(3) {
   margin-top: -20px;
-}
-.cart ul
-
 }
