--- a/nikon/css/nikon.css
+++ b/nikon/css/nikon.css
@@ -1123,7 +1123,7 @@ footer {
 /*  cart form  */
 .cart {
   width: 400px;
-  height: 630px;
+  height: 620px;
   outline: 1px solid #e5e5e5;
   margin-top: 150px;
   margin-left: 50%;
@@ -1131,17 +1131,15 @@ footer {
   padding-top: 20px;
   box-sizing: border-box;
   display: none;
-  overflow: hidden;
 }
 .cart-wrapper {
   width: 300px;
   margin-left: 50%;
   transform: translate(-150px);
-  overflow: hidden;
 }
 .cart-header {
   height: 57px;
-  border-bottom: 1px solid #777;
+  border-bottom: 2px solid #999;
 }
 .cart-header > img {
   width: 30px;
@@ -1161,15 +1159,11 @@ footer {
   transform: translateY(-10px);
 }
 .cart-wrapper > ul{
-  margin-top: -36px;
-  width: 100%;
-  height: 450px;
-  overflow: hidden;
-}
-.cart-wrapper > ul:nth-child(2) {
   margin-top: 10px;
+  width: 100%;
+  height: 400px;
 }
-.cart-wrapper > ul:nth-child(3) {
+.cart-wrapper > ul:nth-child(3){
   height: 120px;
 }
 .cart-wrapper > ul > li {
@@ -1230,53 +1224,64 @@ footer {
   font-weight: bold;
 }
 .cart-wrapper > ul:nth-child(3) > li:nth-child(2) > p {
-  margin-top: 16px;
+  margin-top: 10px;
+}
+.item-no {
+  font-weight: normal;
+  font-size: 16px;
 }
 .total-price {
   float: right;
 }
-.total-item {
+.prlist li span {
+  float: right;
   font-weight: normal;
-  font-size: 16px;
+  margin-right: 10px;
+  font-size: 14px;
+}
+.prlist li select {
+  float: right;
 }
 .cart-btn {
   width: 400px;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-left: 50%;
-  transform: translateX(-200px);
-}
-.cart-btn button {
-  height: 40px;
-  border: 0;
-  background: #ffdd00;
-  color: #000;
-  border-radius: 5px;
-  padding: 5px 10px 5px 10px;
-  box-sizing: border-box;
-  cursor: pointer;
+  transform: translateX(-50%);
 }
 .del-btn {
-  width: 90%;
   margin-top: 10px;
-  margin-left: 50%;
-  transform: translateX(-50%);
 }
-.del-btn > button{
+.del-btn > button {
   width: 48%;
+  height: 40px;
+  border: 0;
   background: #e5e5e5;
+  color: #777;
+  border-radius: 5px;
+  cursor: pointer;
 }
-.del-btn > button:nth-child(1) {
-  float: left;
-}
-.del-btn > button:nth-child(1) {
+.del-sel {
   float: right;
 }
-.chkout-btn {
-  width: 90%;
+.cart-btn > button {
   margin-top: 10px;
-  margin-left: 50%;
-  transform: translateX(-50%);
+  width: 100%;
+  border: 0;
+  height: 40px;
+  background: #ffdd00;
+  color: #777;
+  border-radius: 5px;
+  cursor: pointer;
 }
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1307,37 +1312,30 @@ footer {
   overflow: hidden;
   /* outline: 1px solid red; */
 }
-.detail-wrapper > button {
-  margin-top: 30px;
-  margin-right: 30px;
-  float: right;
-  width: 30px;
-  height: 30px;
-  border: 0px;
-  background: #f0f0f0;
-}
 .detail .img-info img {
   margin-top: 50%;
   transform: translateY(-50%) translateX(-50%);
   width: 90%;
   margin-left: 50%;
 }
-.detail-wrapper > button > i:nth-child(1) {
+.detail .detail-info i:nth-child(1) {
   display: inline-block;
   float: right;
+  margin-top: 30px;
+  margin-right: 30px;
   width: 30px;
   height: 30px;
   /* outline: 1px solid red; */
   background: url('../img/icon.png');
   background-size: 400px 160px;
-  background-position: -204px -84px;
+  background-position: -205px -82px;
   cursor: pointer;
 }
 .detail .detail-info span:nth-child(2) {
   display: block;
   font-size: 14px;
   color: #aaa;
-  margin-top: 30px;
+  margin-top: 100px;
 }
 .detail .detail-info h3 {
   font-size: 34px;
