--- a/portfolio/css/index.css
+++ b/portfolio/css/index.css
@@ -140,10 +140,11 @@ header li:nth-child(1) ~*:hover a {
 .portfolio-pic ul li.scroll { top:0; opacity: 1; }
 .portfolio-pic ul li > div { position: absolute; width: 80%; height: 70%;  left:50%; margin-left: -157px; top: 50%; margin-top: -94px; z-index:5; transition: 0.3s ease; cursor: pointer;}
 .portfolio-pic ul li > div:hover { background: rgba(187,145,120,0.8); }
-.portfolio-pic ul li > div > h3 { color: #fff; margin-left: 40px; margin-top: 50px; opacity: 0; transition: 0.3s ease; }
-.portfolio-pic ul li > div > p { margin-left: 40px; color: #fff; margin-top: 5px; opacity: 0; transition: 0.3s ease; }
-.portfolio-pic ul li > div:hover > h3 { opacity: 1; }
-.portfolio-pic ul li > div:hover > p { opacity: 1;}
+.portfolio-pic ul li > div > a { width: 100%; height: 100%; display: block; margin-top: -50px; padding-top: 50px;}
+.portfolio-pic ul li > div > a > h3 { color: #fff; margin-left: 40px; margin-top: 50px; opacity: 0; transition: 0.3s ease; }
+.portfolio-pic ul li > div > a > p { margin-left: 40px; color: #fff; margin-top: 5px; opacity: 0; transition: 0.3s ease; }
+.portfolio-pic ul li > div:hover > a > h3 { opacity: 1; }
+.portfolio-pic ul li > div:hover > a > p { opacity: 1;}
 .portfolio-pic ul li img  { position: relative; width: 100%; z-index:2;}
 .portfolio-pic ul li:hover > img { width: 200%; }
 .portfolio-pic button { border:0; background: #c99679; padding: 10px 20px 10px 20px; color: #fff; margin-left: 50%; transform: translateX(-50%);}
@@ -165,7 +166,7 @@ header li:nth-child(1) ~*:hover a {
   width: 98%;
   background: #fff;
 }
-.about li:nth-child(1) div { height: 320px;}
+.about li:nth-child(1) div { height: 348px;}
 .about li div img { width: 100%;}
 .about li:nth-child(2) div {
   float: right;
