--- a/substance/css/index.css
+++ b/substance/css/index.css
@@ -76,7 +76,7 @@ header.scroll .login > ul > li:nth-child(2) > a:hover > i { color: #fff; }
 /*  video  */
 .video { width: 100%; height: 100vh; overflow: hidden; }
 .video > div.text-box { position: absolute; z-index: 1;top: 100px; width: 100%; top: 43%; }
-.video .text-box > p:nth-child(1) { text-align: center; color: #fff; font-size: 60px; font-family: gotham-bold-webfont; text-shadow: 0px 2px 2px rgba(0,0,0,0.3); }
+.video .text-box > p:nth-child(1) { text-align: center; color: #fff; font-size: 4rem; font-family: gotham-bold-webfont; text-shadow: 0px 2px 2px rgba(0,0,0,0.3); }
 .video .text-box > p:nth-child(2) { font-size: 40px; color: #fff; text-align: center;}
 .video .text-box > button { background: #e02e28; border: none; border-radius: 5px; margin-left: 50%; transform: translateX(-50%); margin-top: 16px;}
 .video .text-box > button > a { font-size: 16px; color: #fff; padding: 10px 45px; display: block; }
@@ -285,6 +285,8 @@ footer > div > span:nth-child(9) { display: block; margin-top: 10px; color: #fff
 }
 @media screen and (max-width:630px) {
   .video .text-box > h2 > img { width:  }
+  .video .text-box > p:nth-child(1) { font-size: 2rem; }
+  .video .text-box > p:nth-child(2) { font-size: 1.5rem; }
   footer > div > ul.footer-nav { display: block; }
   footer > div > ul.footer-nav > li { display: block; margin: 20px;}
   footer > div > ul.footer-sns { margin: 30px 20px; width: initial;}
