--- a/substance/css/substance_painter.css
+++ b/substance/css/substance_painter.css
@@ -77,7 +77,7 @@ header.scroll .login > ul > li:nth-child(2) > a:hover > i { color: #fff; }
 .background { width: 100%; overflow: hidden; }
 .background > img { min-height: 100vh; margin-left: -200px; overflow: hidden; margin-left:50%; transform: translateX(-50%); }
 .background > p { position: absolute; bottom: 0; right:0; color: #fff; font-size: 14px; }
-.background > div { position: absolute; z-index: 1; left: 50%; bottom: 75px; transform: translateX(-50%); width: 600px; overflow: hidden;}
+.background > div { position: absolute; z-index: 1; left: 50%; bottom: 15%; transform: translateX(-50%); width: 600px; overflow: hidden;}
 .background > div > img { width: 200px; margin-left: 50%; transform: translateX(-100px); }
 .background > div > h2 { font-size: 38px; color: #fff; font-weight: 1; margin-top: 40px; text-align: center;}
 
