--- a/substance/css/substance_painter.css
+++ b/substance/css/substance_painter.css
@@ -74,8 +74,8 @@ header.scroll .login > ul > li:nth-child(2) > a:hover > i { color: #fff; }
 /* section */
 
 /*  background  */
-.background { width: 100%; overflow: hidden; }
-.background > img { min-height: 100vh; margin-left: -200px; overflow: hidden; margin-left:50%; transform: translateX(-50%); }
+.background { width: 100%; height: 100vh; overflow: hidden; }
+.background > img { position: relative; min-width: 100%; height: 100%; overflow: hidden; margin-left:50%;  transform: translateX(-50%) ; }
 .background > p { position: absolute; bottom: 0; right:0; color: #fff; font-size: 14px; }
 .background > div { position: absolute; z-index: 1; left: 50%; bottom: 15%; transform: translateX(-50%); width: 600px; overflow: hidden;}
 .background > div > img { width: 200px; margin-left: 50%; transform: translateX(-100px); }
@@ -167,7 +167,7 @@ header.scroll .login > ul > li:nth-child(2) > a:hover > i { color: #fff; }
 .praise { background: #eaebe9; text-align: center; color: #333; overflow: hidden;}
 .praise h2 { font-size: 48px; font-weight: 1; padding-top: 100px; }
 .praise > p:nth-child(2) { padding-top: 30px; font-size: 24px; }
-.praise > ul { padding-top: 30px; overflow: hidden; }
+.praise > ul { padding-top: 30px; overflow: hidden; padding-bottom: 30px; }
 .praise > ul > li { padding-bottom: 100px;  }
 .praise > ul > li > img { width: 100%; }
 .praise > ul > li > p { font-size: 18px; line-height: 26px; }
@@ -235,6 +235,7 @@ footer > div > span:nth-child(9) { display: block; margin-top: 10px; color: #fff
   .texturing .swiper-slide > p:nth-child(2) { top: 100px; }
 }
 @media screen and (max-width:1200px) {
+  .praise > ul > li { height: 400px;}
 }
 @media screen and (max-width:1024px) {
   header > div { padding: 0; }
@@ -253,7 +254,7 @@ footer > div > span:nth-child(9) { display: block; margin-top: 10px; color: #fff
   .login > ul > li:nth-child(2) > a > i { visibility: visible; font-size: 20px; float: right; display: block;}
   .texturing .swiper-slide > p:nth-child(1) { font-size: 1.2em; }
   .texturing .swiper-slide > p:nth-child(2) { font-size: 0.8em; }
-  .praise > ul > li { height: 40vh; padding-bottom: 0px; }
+  .praise > ul > li { width: 99%; }
 }
 @media screen and (max-width:840px) {
   .footer-sns { display: inline-block; }
@@ -277,7 +278,8 @@ footer > div > span:nth-child(9) { display: block; margin-top: 10px; color: #fff
   footer > div > ul.footer-sns > li { width: 50%; }
 }
 @media screen and (max-width:600px) {
-  .background > div { width: auto; }
+  .background > div { width: auto;  }
+  .background > div > h2 { margin-top: 10px; }
   .augmented > ul > li { padding-bottom: 30px; }
   .augmented > img { padding-top: 30px; }
   .vfx ul { padding-top: 80px; padding-bottom: 40px; overflow: hidden; }
