--- a/substance/css/substance_source.css
+++ b/substance/css/substance_source.css
@@ -132,7 +132,7 @@ header.scroll .login > ul > li:nth-child(2) > a:hover > i { color: #fff; }
 
 /*  article.subscribe  */
 .subscribe { overflow: hidden; padding-top: 50px; padding-bottom: 50px; background: #fff; }
-.subscribe > img { width: 12%; margin-left: 50%; transform: translate(-50%); }
+.subscribe > img { width: 240px; margin-left: 50%; transform: translate(-50%); }
 .subscribe > p { font-size: 18px; text-align: center; line-height: 30px; margin-top: 10px; margin-bottom: 50px; }
 .subscribe > button { border:0; background: #e02e28; color: #fff; width: 220px; height: 40px; font-size: 16px; margin-left: 50%; transform: translate(-50%); }
 
@@ -227,10 +227,13 @@ footer > div > span:nth-child(9) { display: block; margin-top: 10px; color: #fff
   .video .text-box > p:nth-child(2) { margin-top: 0; font-size: 1.4rem; }
   .video .text-box > p:nth-child(3) { font-size: 0.9rem; margin-top: 10px; }
   .library > button { width:90%; }
+  .library > p { padding: 0 20px; }
   .metalic-layer > ul > li:nth-child(1) { background-attachment: initial; background-size: cover; }
   .metalic-layer > ul > li:nth-child(2) { background-attachment: initial; background-size: cover; }
   .metalic-layer > ul > li:nth-child(3) { background-attachment: initial; background-size: cover; }
   .metalic-layer > ul > li:nth-child(4) { background-attachment: initial; background-size: cover; }
+  .game-engine > p { padding: 0 20px; }
+  .subscribe > p { padding: 0 20px; }
   footer > div > ul.footer-nav { display: block; }
   footer > div > ul.footer-nav > li { display: block; margin: 20px;}
   footer > div > ul.footer-sns { margin: 30px 20px; width: initial;}
