--- a/substance/css/substance_designer.css
+++ b/substance/css/substance_designer.css
@@ -311,8 +311,10 @@ footer > div > span:nth-child(9) { display: block; margin-top: 10px; color: #fff
   .texture-layer > ul > li:nth-child(4) { background-attachment: initial;}
   .workflow1 { height: 140vh; }
   .workflow1 > div { display: block; width: 100%; height: 100%; background: url('../img/logos_board_mobile_0.png') no-repeat; background-size: 70%; background-position: center; display:inline-block;}
+  .authoring > p { padding: 0 20px; }
+  .scan p:nth-child(2) { padding: 0 20px; margin-top: 20px; }
   .background2 { background-attachment: initial; }
-  .background3 { background-attachment: initial; background-size: 160vh; }
+  .background3 { background-attachment: initial; background-size: cover; }
   .node > ul > li:nth-child(1) { background-attachment: initial; }
   .node > ul > li:nth-child(2) { background-attachment: initial; }
   .node > ul > li:nth-child(3) { background-attachment: initial; }
