--- a/hurom/resources/css/template.css
+++ b/hurom/resources/css/template.css
@@ -1,4 +1,4 @@
-* { margin: 0; padding: 0; font-size: 0; }
+* { margin: 0; padding: 0; font-size: 0; letter-spacing: -1.3px; }
 li { list-style: none; }
 a { text-decoration: none; color: #262626; }
 .blind { display: none; }
