--- a/hoban/resources/css/layout.css
+++ b/hoban/resources/css/layout.css
@@ -1,4 +1,4 @@
-* { font-size: 0; padding: 0; margin: 0; }
+* { font-size: 0; padding: 0; margin: 0; letter-spacing: -1.3px; }
 a { text-decoration: none; color: #fff; }
 li { list-style: none; }
 body { font-family: 'NotosansKR', 'sans-serif' }
