--- a/nik/resources/css/layout.css
+++ b/nik/resources/css/layout.css
@@ -313,7 +313,7 @@ footer { }
   header h1 { top: 35px; transition: all 0.1s ease; }
   header.scroll h1 { top: -10px;}
   #gnb {display: none; }
-  .sub_menu .right .swiper-container { width: 80%; }
+  /* .sub_menu .right .swiper-container { width: 80%; } */
   .footer_top h2 {font-size: 28px;}
   .footer_top .footer_menu > li {width: 100%; margin-bottom: 20px; }
   .footer_top .footer_menu > li > a { position: relative; font-size: 16px; line-height: 30px; border-bottom: 1px solid #c2c2c2; }
