--- a/ACE/admin_ace/resource/css/contents.css
+++ b/ACE/admin_ace/resource/css/contents.css
@@ -12,7 +12,7 @@
 .cst_wrap { overflow: hidden; width: 505px; margin: 0 auto; }
 
 /* 190617 추가 */
-.cst_wrap { width: 95%; }
+.cst_wrap { width: 805px; }
 /* //190617 추가 */
 
 .custom_popup .cst_header { width: 100%; height: 45px; background: #1c5295; border-bottom: 1px solid #144786;  }
