--- a/nik/resources/css/layout.css
+++ b/nik/resources/css/layout.css
@@ -1,7 +1,7 @@
 * { padding: 0; margin: 0; font-size: 0; }
 body { font-family: 'arial', sans-serif; color: #000; }
 li { list-style: none;}
-a { text-decoration: none; color: transparent; }
+a { text-decoration: none; color: #000; outline: 0; }
 .blind { display: none; }
 
 .popup { position: fixed; right: -460px;  z-index: 1000; width: 460px; padding: 40px 32px; box-sizing: border-box; background: #fff; transition: all 0.3s ease; }
