--- a/nik/resources/css/layout.css
+++ b/nik/resources/css/layout.css
@@ -1,12 +1,12 @@
 * { padding: 0; margin: 0; font-size: 0; }
 body { font-family: 'arial', sans-serif; color: #000; }
 li { list-style: none;}
-a { text-decoration: none; color: #000; outline: 0; }
+a { text-decoration: none; color: #000;  }
 .blind { display: none; }
 
 .popup { position: fixed; right: -460px;  z-index: 1000; width: 460px; padding: 40px 32px; box-sizing: border-box; background: #fff; transition: all 0.3s ease; }
 .popup h2 { position: relative; left: 50%; transform: translateX(-50%); display: inline-block; width: 100px; margin: 0 auto; margin-bottom: 30px; }
-.popup h2 a { display: block; height: 100%; }
+.popup h2 a { display: block; height: 100%; color: none; }
 .popup h2 a img { width: 100%; }
 .popup .pop_cont { border: 1px solid #e5e5e5; }
 
